{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 99,
  "lineage": "528b8be1-fc42-8663-21a6-91dddc7d97ed",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "balosar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "arn_suffix": "app/balosar-alb05/9e513ef00a7f0c9f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balosar-alb05-2087362970.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balosar-alb05",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc3140504f17f033"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098c3bd9df686dd46"
              },
              {
                "subnet_id": "subnet-0fbdbb1cd886e364f"
              }
            ],
            "subnets": [
              "subnet-098c3bd9df686dd46",
              "subnet-0fbdbb1cd886e364f"
            ],
            "tags": {
              "Name": "balosar-alb05"
            },
            "vpc_id": "vpc-08aad8abde85c50d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "_nat_eip05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "balosar_ec205",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ea746da1a2e36e7",
            "arn": "arn:aws:ec2:us-east-2:912083617270:instance/i-03f739bed3c009ef6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "balosar-instance-profile05",
            "id": "i-03f739bed3c009ef6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0298a9599a6a385ad",
            "private_dns": "ip-10-25-101-83.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.25.101.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05fa05e5aca6aac03",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a75bc3850b6b553",
            "tags": {
              "Name": "balosar-ec205"
            },
            "tags_all": {
              "Name": "balosar-ec205"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-067ec400a71f284a4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.balosar_rds05",
            "aws_db_subnet_group.balosar_rds_subnet_group05",
            "aws_iam_instance_profile.balosar_instance_profile05",
            "aws_iam_role.balosar_ec2_role05",
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_rds_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "balosar_igw05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:internet-gateway/igw-07da0a9b3a07b7c60",
            "id": "igw-07da0a9b3a07b7c60",
            "owner_id": "912083617270",
            "tags": {
              "Name": "balosar-igw05"
            },
            "tags_all": {
              "Name": "balosar-igw05"
            },
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balosar_alb05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "arn_suffix": "app/balosar-alb05/9e513ef00a7f0c9f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balosar-alb05-2087362970.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balosar-alb05",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc3140504f17f033"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098c3bd9df686dd46"
              },
              {
                "subnet_id": "subnet-0fbdbb1cd886e364f"
              }
            ],
            "subnets": [
              "subnet-098c3bd9df686dd46",
              "subnet-0fbdbb1cd886e364f"
            ],
            "tags": {
              "Name": "balosar-alb05"
            },
            "tags_all": {
              "Name": "balosar-alb05"
            },
            "vpc_id": "vpc-08aad8abde85c50d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_alb_sg05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balosar_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/41484d1aaae5f652",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/41484d1aaae5f652",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.balosar_alb05",
            "aws_security_group.balosar_alb_sg05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balosar_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/8422c316fe64492c",
            "certificate_arn": "arn:aws:acm:us-east-2:912083617270:certificate/ae5d970d-f5a4-4196-986c-671433485307",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/8422c316fe64492c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.balosar_alb05",
            "aws_lb_target_group.balosar_alb_tg05",
            "aws_security_group.balosar_alb_sg05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05",
            "data.aws_acm_certificate.balosar_existing_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balosar_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/8422c316fe64492c",
            "certificate_arn": "arn:aws:acm:us-east-2:912083617270:certificate/ae5d970d-f5a4-4196-986c-671433485307",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:listener/app/balosar-alb05/9e513ef00a7f0c9f/8422c316fe64492c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.balosar_alb05",
            "aws_lb_target_group.balosar_alb_tg05",
            "aws_security_group.balosar_alb_sg05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05",
            "data.aws_acm_certificate.balosar_existing_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "balosar_alb_tg05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8",
            "arn_suffix": "targetgroup/balosar-tg05/02b450bc3c8d80b8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:912083617270:loadbalancer/app/balosar-alb05/9e513ef00a7f0c9f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "balosar-tg05",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "balosar-tg05"
            },
            "tags_all": {
              "Name": "balosar-tg05"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "balosar_alb_tg_attach05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8-20260209075932232000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:912083617270:targetgroup/balosar-tg05/02b450bc3c8d80b8",
            "target_id": "i-03f739bed3c009ef6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.balosar_rds05",
            "aws_db_subnet_group.balosar_rds_subnet_group05",
            "aws_iam_instance_profile.balosar_instance_profile05",
            "aws_iam_role.balosar_ec2_role05",
            "aws_instance.balosar_ec205",
            "aws_lb_target_group.balosar_alb_tg05",
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_rds_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "balosar_nat05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "balosar_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "balosar_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07da0a9b3a07b7c60",
            "id": "r-rtb-005e69d3701554f6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005e69d3701554f6b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.balosar_igw05",
            "aws_route_table._public_rt05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_private_rt05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:route-table/rtb-0e2876ef17164ff74",
            "id": "rtb-0e2876ef17164ff74",
            "owner_id": "912083617270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "balosar-private-rt05"
            },
            "tags_all": {
              "Name": "balosar-private-rt05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "_public_rt05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:route-table/rtb-005e69d3701554f6b",
            "id": "rtb-005e69d3701554f6b",
            "owner_id": "912083617270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07da0a9b3a07b7c60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "balosar-public-rt05"
            },
            "tags_all": {
              "Name": "balosar-public-rt05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "balosar_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bd7bf707dacdb38",
            "route_table_id": "rtb-0e2876ef17164ff74",
            "subnet_id": "subnet-03a75bc3850b6b553"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table._private_rt05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061ac9da3385ff314",
            "route_table_id": "rtb-0e2876ef17164ff74",
            "subnet_id": "subnet-09b0cdb2c5d3c21af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table._private_rt05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "balosar_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd09147667a3ac6f",
            "route_table_id": "rtb-005e69d3701554f6b",
            "subnet_id": "subnet-098c3bd9df686dd46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table._public_rt05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f172ba7ac5b0099f",
            "route_table_id": "rtb-005e69d3701554f6b",
            "subnet_id": "subnet-0fbdbb1cd886e364f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table._public_rt05",
            "aws_subnet.balosar_public_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balosar_alb_sg05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group/sg-0cc3140504f17f033",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067ec400a71f284a4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0cc3140504f17f033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balosar-alb-sg05",
            "name_prefix": "",
            "owner_id": "912083617270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balosar-alb-sg05"
            },
            "tags_all": {
              "Name": "balosar-alb-sg05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balosar_ec2_sg05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group/sg-067ec400a71f284a4",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.25.0.0/16"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.25.0.0/16"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2f6bb9dcbc1ca03"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-7ba54012"
                ],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03eec66647eee1be8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-067ec400a71f284a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.25.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balosar-ec2-sg05",
            "name_prefix": "",
            "owner_id": "912083617270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balosar-ec2-sg05"
            },
            "tags_all": {
              "Name": "balosar-ec2-sg05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balosar_rds_sg05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group/sg-0c2f6bb9dcbc1ca03",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-0c2f6bb9dcbc1ca03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067ec400a71f284a4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "balosar-rds-sg05",
            "name_prefix": "",
            "owner_id": "912083617270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balosar-rds-sg05"
            },
            "tags_all": {
              "Name": "balosar-rds-sg05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balosar_vpce_sg05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group/sg-03eec66647eee1be8",
            "description": "Interface VPC endpoints security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03eec66647eee1be8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067ec400a71f284a4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "balosar-vpce-sg05",
            "name_prefix": "",
            "owner_id": "912083617270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balosar-vpce-sg05"
            },
            "tags_all": {
              "Name": "balosar-vpce-sg05"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "balosar_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:subnet/subnet-03a75bc3850b6b553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.25.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a75bc3850b6b553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912083617270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "balosar-private-subnet01"
            },
            "tags_all": {
              "Name": "balosar-private-subnet01"
            },
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:subnet/subnet-09b0cdb2c5d3c21af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.25.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b0cdb2c5d3c21af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912083617270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "balosar-private-subnet02"
            },
            "tags_all": {
              "Name": "balosar-private-subnet02"
            },
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "balosar_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:subnet/subnet-098c3bd9df686dd46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.25.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098c3bd9df686dd46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912083617270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "balosar-public-subnet01"
            },
            "tags_all": {
              "Name": "balosar-public-subnet01"
            },
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:subnet/subnet-0fbdbb1cd886e364f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.25.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdbb1cd886e364f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912083617270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "balosar-public-subnet02"
            },
            "tags_all": {
              "Name": "balosar-public-subnet02"
            },
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "balosar_vpc05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc/vpc-08aad8abde85c50d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.25.0.0/16",
            "default_network_acl_id": "acl-0772e6b1011b3d8c2",
            "default_route_table_id": "rtb-072c074f629ce01e1",
            "default_security_group_id": "sg-03fc1ebd448b5507f",
            "dhcp_options_id": "dopt-0572005d9eea547c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08aad8abde85c50d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072c074f629ce01e1",
            "owner_id": "912083617270",
            "tags": {
              "Name": "balosar-vpc05"
            },
            "tags_all": {
              "Name": "balosar-vpc05"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-0308e129fddf0be0e",
            "dns_entry": [
              {
                "dns_name": "vpce-0308e129fddf0be0e-khmkj1nu.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0308e129fddf0be0e-khmkj1nu-us-east-2b.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0308e129fddf0be0e-khmkj1nu-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04605532IZ47SVNL9LBM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0308e129fddf0be0e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0188fd6b600320c72",
              "eni-08dab9ea152fb6603"
            ],
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03eec66647eee1be8"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.25.101.250",
                "subnet_id": "subnet-03a75bc3850b6b553"
              },
              {
                "ipv4": "10.25.102.208",
                "subnet_id": "subnet-09b0cdb2c5d3c21af"
              }
            ],
            "subnet_ids": [
              "subnet-03a75bc3850b6b553",
              "subnet-09b0cdb2c5d3c21af"
            ],
            "tags": {
              "Name": "balosar-vpce-ec2messages"
            },
            "tags_all": {
              "Name": "balosar-vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_logs05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-0646a0860d4a245ca",
            "dns_entry": [
              {
                "dns_name": "vpce-0646a0860d4a245ca-h2n7rogn.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0646a0860d4a245ca-h2n7rogn-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0646a0860d4a245ca-h2n7rogn-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z078711820DXLEIKIPE92"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z078711723FUNGXPY9DFR"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z0787112E9RAIIH3CJ81"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0787119UDP8FZOQA2IT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0646a0860d4a245ca",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-022bf814cf41cc5e2",
              "eni-066a043681032978c"
            ],
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03eec66647eee1be8"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.25.101.36",
                "subnet_id": "subnet-03a75bc3850b6b553"
              },
              {
                "ipv4": "10.25.102.234",
                "subnet_id": "subnet-09b0cdb2c5d3c21af"
              }
            ],
            "subnet_ids": [
              "subnet-03a75bc3850b6b553",
              "subnet-09b0cdb2c5d3c21af"
            ],
            "tags": {
              "Name": "balosar-vpce-logs"
            },
            "tags_all": {
              "Name": "balosar-vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_s3_gw05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-024df825a67ad1b6f",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "3.5.92.0/23",
              "3.5.88.0/22",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-024df825a67ad1b6f",
            "ip_address_type": "ipv4",
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e2876ef17164ff74"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "balosar-vpce-s3"
            },
            "tags_all": {
              "Name": "balosar-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table._private_rt05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_secrets05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-0949e40b3248556c3",
            "dns_entry": [
              {
                "dns_name": "vpce-0949e40b3248556c3-5ssskzcn.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0949e40b3248556c3-5ssskzcn-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0949e40b3248556c3-5ssskzcn-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z046227214ZXTXKYKU2S7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0949e40b3248556c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023dc59598bc6ccfb",
              "eni-0e4e5df6877127928"
            ],
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03eec66647eee1be8"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.25.101.166",
                "subnet_id": "subnet-03a75bc3850b6b553"
              },
              {
                "ipv4": "10.25.102.168",
                "subnet_id": "subnet-09b0cdb2c5d3c21af"
              }
            ],
            "subnet_ids": [
              "subnet-03a75bc3850b6b553",
              "subnet-09b0cdb2c5d3c21af"
            ],
            "tags": {
              "Name": "balosar-vpce-secretsmanager"
            },
            "tags_all": {
              "Name": "balosar-vpce-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_ssm05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-06f4b2534993b5396",
            "dns_entry": [
              {
                "dns_name": "vpce-06f4b2534993b5396-25ojxse2.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-06f4b2534993b5396-25ojxse2-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-06f4b2534993b5396-25ojxse2-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z07894101TUA1JB08ZHEE"
              },
              {
                "dns_name": "ssm.us-east-2.api.aws",
                "hosted_zone_id": "Z04591811AVNMMNE8G5S5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f4b2534993b5396",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01b6b96a0a312e428",
              "eni-099e353a1427e8b54"
            ],
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03eec66647eee1be8"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.25.101.223",
                "subnet_id": "subnet-03a75bc3850b6b553"
              },
              {
                "ipv4": "10.25.102.59",
                "subnet_id": "subnet-09b0cdb2c5d3c21af"
              }
            ],
            "subnet_ids": [
              "subnet-03a75bc3850b6b553",
              "subnet-09b0cdb2c5d3c21af"
            ],
            "tags": {
              "Name": "balosar-vpce-ssm"
            },
            "tags_all": {
              "Name": "balosar-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "balosar_vpce_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:vpc-endpoint/vpce-0962759e7be3c8bb0",
            "dns_entry": [
              {
                "dns_name": "vpce-0962759e7be3c8bb0-nktr7s3i.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0962759e7be3c8bb0-nktr7s3i-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0962759e7be3c8bb0-nktr7s3i-us-east-2b.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z07939752Y71TZKJMOONP"
              },
              {
                "dns_name": "ssmmessages.us-east-2.api.aws",
                "hosted_zone_id": "Z0789655305UKXBBGYII8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0962759e7be3c8bb0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0403b77fa98418a47",
              "eni-060f6db8817312d22"
            ],
            "owner_id": "912083617270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03eec66647eee1be8"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.25.101.180",
                "subnet_id": "subnet-03a75bc3850b6b553"
              },
              {
                "ipv4": "10.25.102.191",
                "subnet_id": "subnet-09b0cdb2c5d3c21af"
              }
            ],
            "subnet_ids": [
              "subnet-03a75bc3850b6b553",
              "subnet-09b0cdb2c5d3c21af"
            ],
            "tags": {
              "Name": "balosar-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "balosar-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08aad8abde85c50d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_subnet.balosar_private_subnets",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_alb_sg_egress_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-07061f59bd3f330b7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07061f59bd3f330b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-067ec400a71f284a4",
            "security_group_id": "sg-0cc3140504f17f033",
            "security_group_rule_id": "sgr-07061f59bd3f330b7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_alb_sg05",
            "aws_security_group.balosar_ec2_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_ec2_sg_egress_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0839018259d3ed4d5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0839018259d3ed4d5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c2f6bb9dcbc1ca03",
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-0839018259d3ed4d5",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_rds_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_ec2_sg_egress_dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-03841c2ef9e3658ac",
            "cidr_ipv4": "10.25.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-03841c2ef9e3658ac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-03841c2ef9e3658ac",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_ec2_sg_egress_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-08dea6860e3456561",
            "cidr_ipv4": "10.25.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-08dea6860e3456561",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-08dea6860e3456561",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_ec2_sg_egress_https_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0748c0bc706881908",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0748c0bc706881908",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-7ba54012",
            "referenced_security_group_id": null,
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-0748c0bc706881908",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_vpc.balosar_vpc05",
            "data.aws_prefix_list.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_ec2_sg_egress_https_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-01e8d50e7df1f2da2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01e8d50e7df1f2da2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03eec66647eee1be8",
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-01e8d50e7df1f2da2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_vpce_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "balosar_vpce_sg_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-078c943090310ae88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-078c943090310ae88",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03eec66647eee1be8",
            "security_group_rule_id": "sgr-078c943090310ae88",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_vpce_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "balosar_alb_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0e3c051d3c7828cf4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e3c051d3c7828cf4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc3140504f17f033",
            "security_group_rule_id": "sgr-0e3c051d3c7828cf4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_alb_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "balosar_alb_sg_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-097577aa300ae0a0b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-097577aa300ae0a0b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc3140504f17f033",
            "security_group_rule_id": "sgr-097577aa300ae0a0b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_alb_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "balosar_ec2_sg_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0725c3960626788f7",
            "cidr_ipv4": "10.25.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0725c3960626788f7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067ec400a71f284a4",
            "security_group_rule_id": "sgr-0725c3960626788f7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "balosar_rds_sg_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0fe75b6a97b7f984a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0fe75b6a97b7f984a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-067ec400a71f284a4",
            "security_group_id": "sg-0c2f6bb9dcbc1ca03",
            "security_group_rule_id": "sgr-0fe75b6a97b7f984a",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_rds_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "balosar_vpce_sg_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:912083617270:security-group-rule/sgr-0d0e1af322d216769",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0d0e1af322d216769",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-067ec400a71f284a4",
            "security_group_id": "sg-03eec66647eee1be8",
            "security_group_rule_id": "sgr-0d0e1af322d216769",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.balosar_ec2_sg05",
            "aws_security_group.balosar_vpce_sg05",
            "aws_vpc.balosar_vpc05"
          ]
        }
      ]
    }
  ]
}